## Process this file with automake to produce Makefile.in

bin_SCRIPTS = datacube.csh datacube.icl

dist_bin_SCRIPTS = compare.csh compare_x.csh \
                   multistack.csh passband.csh peakmap.csh \
                   ripper.csh squash.csh stacker.csh step.csh \
                   velmap.csh

# stardocs_DATA = @STAR_LATEX_DOCUMENTATION@

dist_starnews_DATA = datacube.news

SUBDIRS = demo help sc16 sun237

CLEANFILES = version.dat
